Fixed - Cross mod interaction - Power not moving correctly